Alteração do form

--- a/PRIMEIRA PÁGINA.html
+++ b/PRIMEIRA PÁGINA.html
@@ -43,7 +43,7 @@
 
         <!-- ABRINDO DIV P/ CORPO -->
         <div class="corpo">
-            <img id="banner" src="C:\0 SOULCODE\Projetos\CSS\01.10\GITHUB\11.jpg" alt="aqui teria um banner ">
+            <img id="banner" src="11.jpg" alt="aqui teria um banner ">
 
             <section class="quemSomos">
 
